--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>590</width>
-    <height>246</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>590</width>
-    <height>246</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>590</width>
-    <height>246</height>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -249,7 +249,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>150</y>
+      <y>120</y>
       <width>511</width>
       <height>16</height>
      </rect>
@@ -269,6 +269,16 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QTableView" name="tableViewPlayList">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>190</y>
+      <width>561</width>
+      <height>192</height>
+     </rect>
     </property>
    </widget>
   </widget>
